bdr.BDR.scala.error
Erreur de compilation :
BDR:6: error: identifier expected but character literal found.
    } else if (litMessage():String=='L'){
                                    ^BDR:23: error: ')' expected but '}' found.
  } else {fini=true}
  ^